@@ -1,9 +1,13 @@
 package ru.meefik.linuxdeploy;
 
 import java.io.BufferedReader;
+import java.io.BufferedWriter;
+import java.io.Closeable;
 import java.io.DataOutputStream;
 import java.io.File;
 import java.io.FileOutputStream;
+import java.io.FileReader;
+import java.io.FileWriter;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
@@ -125,8 +129,7 @@ public class EnvUtils {
 			BufferedReader reader = new BufferedReader(new InputStreamReader(
 					stdout));
 			int n = 0;
-			String line;
-			while ((line = reader.readLine()) != null) {
+			while (reader.readLine() != null) {
 				n++;
 			}
 			reader.close();
@@ -138,6 +141,106 @@ public class EnvUtils {
 			stdin.close();
 		} catch (Exception e) {
 			e.printStackTrace();
+		}
+		return result;
+	}
+	
+	// closeable helper
+	private static void close(Closeable c) {
+		if (c != null) {
+			try {
+				c.close();
+			} catch (IOException e) {
+				e.printStackTrace();
+			}
+		}
+	}
+
+	// update version file
+	public static Boolean setVersion() {
+		Boolean result = false;
+		String f = PrefStore.ENV_DIR + "/etc/version";
+		BufferedWriter bw = null;
+		try {
+			bw = new BufferedWriter(new FileWriter(f));
+			bw.write(PrefStore.VERSION);
+			result = true;
+		} catch (IOException e) {
+			e.printStackTrace();
+		} finally {
+			close(bw);
+		}
+		return result;
+	}
+
+	// check latest version
+	public static Boolean isLatestVersion() {
+		Boolean result = false;
+		String f = PrefStore.ENV_DIR + "/etc/version";
+		BufferedReader br = null;
+		try {
+			br = new BufferedReader(new FileReader(f));
+			String line = br.readLine();
+			if (PrefStore.VERSION.equals(line))
+				result = true;
+		} catch (IOException e) {
+			e.printStackTrace();
+		} finally {
+			close(br);
+		}
+		return result;
+	}
+	
+	// update deploy.conf
+	public static Boolean storeConfig() {
+		Boolean result = false;
+		String confFile = PrefStore.ENV_DIR + "/etc/deploy.conf";
+		List<String> lines = new ArrayList<>();
+		lines.add("DEBUG_MODE=\"" + PrefStore.DEBUG_MODE + "\"");
+		lines.add("TRACE_MODE=\"" + PrefStore.TRACE_MODE + "\"");
+		lines.add("MNT_TARGET=\"" + PrefStore.MNT_TARGET + "\"");
+		lines.add("IMG_TARGET=\"" + PrefStore.IMG_TARGET + "\"");
+		lines.add("IMG_SIZE=\"" + PrefStore.IMG_SIZE + "\"");
+		lines.add("FS_TYPE=\"" + PrefStore.FS_TYPE + "\"");
+		lines.add("DEPLOY_TYPE=\"" + PrefStore.DEPLOY_TYPE + "\"");
+		lines.add("DISTRIB=\"" + PrefStore.DISTRIB + "\"");
+		lines.add("ARCH=\"" + PrefStore.ARCH + "\"");
+		lines.add("SUITE=\"" + PrefStore.SUITE + "\"");
+		lines.add("MIRROR=\"" + PrefStore.MIRROR + "\"");
+		lines.add("USER_NAME=\"" + PrefStore.USER_NAME + "\"");
+		lines.add("USER_PASSWORD=\"" + PrefStore.USER_PASSWORD + "\"");
+		lines.add("SERVER_DNS=\"" + PrefStore.SERVER_DNS + "\"");
+		lines.add("LOCALE=\"" + PrefStore.LOCALE + "\"");
+		lines.add("DESKTOP_ENV=\"" + PrefStore.DESKTOP_ENV + "\"");
+		lines.add("USE_COMPONENTS=\"" + PrefStore.USE_COMPONENTS + "\"");
+		lines.add("STARTUP=\"" + PrefStore.STARTUP + "\"");
+		lines.add("CUSTOM_SCRIPTS=\"" + PrefStore.CUSTOM_SCRIPTS + "\"");
+		lines.add("CUSTOM_MOUNTS=\"" + PrefStore.CUSTOM_MOUNTS + "\"");
+		lines.add("SSH_PORT=\"" + PrefStore.SSH_PORT + "\"");
+		lines.add("VNC_DISPLAY=\"" + PrefStore.VNC_DISPLAY + "\"");
+		lines.add("VNC_DEPTH=\"" + PrefStore.VNC_DEPTH + "\"");
+		lines.add("VNC_DPI=\"" + PrefStore.VNC_DPI + "\"");
+		lines.add("VNC_GEOMETRY=\"" + PrefStore.VNC_GEOMETRY + "\"");
+		lines.add("VNC_ARGS=\"" + PrefStore.VNC_ARGS + "\"");
+		lines.add("XSERVER_DISPLAY=\"" + PrefStore.XSERVER_DISPLAY + "\"");
+		lines.add("XSERVER_HOST=\"" + PrefStore.XSERVER_HOST + "\"");
+		lines.add("FB_DISPLAY=\"" + PrefStore.FB_DISPLAY + "\"");
+		lines.add("FB_DPI=\"" + PrefStore.FB_DPI + "\"");
+		lines.add("FB_DEV=\"" + PrefStore.FB_DEV + "\"");
+		lines.add("FB_INPUT=\"" + PrefStore.FB_INPUT + "\"");
+		lines.add("FB_ARGS=\"" + PrefStore.FB_ARGS + "\"");
+		lines.add("FB_FREEZE=\"" + PrefStore.FB_FREEZE + "\"");
+		BufferedWriter bw = null;
+		try {
+			bw = new BufferedWriter(new FileWriter(confFile));
+			for (String s : lines) {
+				bw.write(s + "\n");
+			}
+			result = true;
+		} catch (Exception e) {
+			e.printStackTrace();
+		} finally {
+			close(bw);
 		}
 		return result;
 	}
@@ -286,7 +389,7 @@ public class EnvUtils {
 		}
 
 		// update version
-		if (!PrefStore.setVersion()) {
+		if (!setVersion()) {
 			Logger.log("fail\n");
 			return false;
 		}
@@ -320,7 +423,7 @@ public class EnvUtils {
 	public static boolean updateConf() {
 		Logger.log("Updating configuration file ... ");
 		// update config file
-		if (PrefStore.storeConfig()) {
+		if (storeConfig()) {
 			Logger.log("done\n");
 			return true;
 		} else {
