@@ -7,6 +7,7 @@ Added unchroot script
 Implemented integration with Android
 Implemented integration with XServer XSDL
 Translated into Slovak and French
+Automatically select the language
 
 1.5.2
 Added support Slackware
@@ -316,6 +317,7 @@ Updated list packages of base system installation
 Реализована интеграция с Android
 Реализована интеграция с XServer XSDL
 Переведено на словацкий и французский
+Автоматический выбор языка интерфейса
 
 1.5.2
 Добавлена поддержка Slackware
